# EchoWrite

./: .gitignore  DEVELOPMENT_LOG.md
android/: EchoWriteIME.kt  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/echowrite/app/: EchoWriteIME.kt
android/app/src/main/res/layout/: keyboard_layout.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: method.xml
chrome-extension/: background.js  content.css  content.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  request_mic.html  request_mic.js
core/: Cargo.toml
core/benches/: formatter_bench.rs
core/src/: asr.rs  audio.rs  database.rs  ffi.rs  formatter.rs  jni.rs  lib.rs  llm.rs  models.rs
docs/: optimization_proposals.md  semantic_paragraphing_design.md  testing.md  web_browser_support.md
ios/: DarwinNotificationCenter.swift  EchoWriteBindingsShim.swift  EchoWriteKeyboard-Info.plist  EchoWriteShared.swift  KeyboardViewController.swift  echowrite_core.swift  echowrite_coreFFI.h  echowrite_coreFFI.modulemap  project.yml
ios/App/: AudioProcessingService.swift  ContentView.swift  EchoWriteApp.entitlements  EchoWriteApp.swift  EchoWriteAppDelegate.swift
ios/EchoWriteKeyboard.xcodeproj/: project.pbxproj
macos/: AppDelegate.swift  EchoWriteBindingsShim.swift  EchoWriteMac-Info.plist
macos/EchoWriteMac.xcodeproj/: project.pbxproj
scripts/: build_all.bat  build_all.sh  build_android.sh  build_apple.sh  build_ios.sh  build_windows.bat
windows/: EchoWrite.csproj  Program.cs
