[package]
name = "echowrite-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# 語音轉文字 (ASR)
whisper-rs = { version = "0.15" }

# 本地 LLM (SLM) 推理
llama-cpp-2 = { version = "0.1" }

# 本地資料庫
rusqlite = { version = "0.31", features = ["bundled"] }
dirs-next = "2.0"

# 音訊與 VAD 處理
hound = "3.5"
encoding_rs = "0.8"
cpal = "0.15"
# 靜音檢測與正則/格式化
regex = "1.10"
lazy_static = "1.4"

# 跨平台語言綁定 (Swift, Kotlin, C#)
uniffi = { version = "0.28", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
