[package]
name = "echowrite-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[[bench]]
name = "formatter_bench"
harness = false

[dev-dependencies]
criterion = "0.5"

[dependencies]
# 本地資料庫
rusqlite = { version = "0.31", features = ["bundled"] }
dirs-next = "2.0"

# 音訊與 VAD 處理
hound = "3.5"
encoding_rs = "0.8"
cpal = "0.15"

# 靜音檢測與正則/格式化
regex = "1.10"
lazy_static = "1.4"

# 跨平台語言綁定 (Swift, Kotlin, C#)
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1.0"

tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = { version = "0.21", default-features = false }

# 模型下載與校驗
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

# 依不同平台載入 whisper-rs / llama-cpp-2
# Apple 平台：Whisper 啟用 CoreML (ANE) 加速，Llama 啟用 Metal GPU 加速。
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
whisper-rs = { version = "0.15", features = ["coreml"] }
llama-cpp-2 = { version = "0.1", features = ["metal"] }
# 用於解壓縮下載回來的 CoreML 編碼器模型 (*.mlmodelc.zip)
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
whisper-rs = { version = "0.15" }
llama-cpp-2 = { version = "0.1" }
